# AutoClicker

./: AutoClicker.spec  README.md  event_types.py  main.py  mover.py  pyproject.toml  recorder.py
autoclicker/: __init__.py
autoclicker/application/: __init__.py  controller.py  ports.py  use_cases.py
autoclicker/composition/: __init__.py  bootstrap.py
autoclicker/domain/: __init__.py  models.py
autoclicker/infrastructure/hotkeys/: __init__.py  keyboard_hotkeys.py
autoclicker/infrastructure/mouse/: __init__.py  pyautogui_move_recorder.py  pyautogui_scenario_player.py  pynput_click_recorder.py
autoclicker/infrastructure/ui/: __init__.py  tkinter_main_window.py
