[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclicker"
dynamic = ["version"]
description = "Mouse automation tool with recording and playback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "keyboard",
  "pyautogui",
  "pynput",
]

[project.optional-dependencies]
build = [
  "build>=1.2",
  "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["autoclicker*"]

[tool.setuptools.dynamic]
version = {attr = "autoclicker.__version__"}
